# degov

./: .dockerignore  .gitignore  .pnp.cjs  Cargo.toml  DSL.md  Dockerfile  Dockerfile.www  LSP_SETUP.md  Makefile  README.md  REQUIREMENTS.md  buf.gen.yaml  buf.yaml  fdb.cluster  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reset_fdb.sh  restart_fdb.sh  setup_fdb.sh  skaffold.yaml  test-invalid.yaml  test-model.yaml  test-syntax.dgv  test_client_server.sh  test_fdb_connection.rs  turbo.json
.turbo/preferences/: tui.json
apps/infra-admin/: package.json  vite.config.ts
apps/office/: .cta.json  package.json  vite.config.ts
apps/wallet/: app.json  metro.config.js  package.json
apps/www/: package.json  railpack.json
crates/agora-build/: Cargo.toml
crates/agora-process/: Cargo.toml
crates/agora/process/: Cargo.toml
crates/agora/process/src/: env.rs  message.rs
crates/chancelor/: Cargo.toml  build.rs
crates/chancelor/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: build.rs  dgl.rs  infrastructure.rs  main.rs  validate.rs
crates/core/: Cargo.toml
crates/crypto/: Cargo.toml
crates/degov-admin/: Cargo.toml
crates/degov-api/: Cargo.toml  build.rs
crates/degov-api/connect-rpc/: CLIENT_README.md  Cargo.toml
crates/degov-api/connect-rpc-build/: Cargo.toml
crates/degov-api/connect-rpc-build/src/: gen.rs  lib.rs
crates/degov-api/connect-rpc/examples/: simple.rs
crates/degov-api/connect-rpc/src/: lib.rs
crates/degov-api/connect-rpc/src/client/: common.rs  metadata.rs  mod.rs  request.rs  reqwest.rs  response.rs  stream.rs
crates/degov-api/connect-rpc/src/client/request/: builder.rs
crates/degov-api/connect-rpc/src/client/response/: builder.rs  error.rs
crates/degov-api/connect-rpc/src/server/: mod.rs  response.rs
crates/degov-api/connect-rpc/src/server/handler/: codec.rs  handler_stream.rs
crates/degov-api/examples/: generated_client.rs  generic_client.rs  simple.rs
crates/degov-api/proto/: engine.proto
crates/degov-api/src/: client.rs  engine.rs  error.rs  hello.rs  lib.rs
crates/degov-cli/: Cargo.toml
crates/degov-cli/src/: dgl.rs  infrastructure.rs  main.rs  server.rs  validate.rs
crates/degov-consent/: Cargo.toml
crates/degov-core/: Cargo.toml
crates/degov-db/: Cargo.toml
crates/degov-db/src/: diff.rs  lib.rs  main.rs  node.rs  node_iter.rs  page.rs  tracing.rs  tree.rs
crates/degov-db/src/diff/: diff_builder.rs  page_range_snapshot.rs  range_list.rs
crates/degov-db/src/digest/: mod.rs  trait.rs  wrappers.rs
crates/degov-db/src/visitor/: dot.rs  mod.rs  page_range_hash.rs
crates/degov-dgl/: Cargo.toml
crates/degov-drd/: Cargo.toml
crates/degov-dsl/: Cargo.toml  GRAPH.md  README.md
crates/degov-dsl/examples/: error_demo.rs  parse_file.rs  parse_model.rs  resolve_inheritance.rs  simple.dgv  simple.rs  test_error.dgv  test_valid.dgv
crates/degov-dsl/src/: credential.rs  error.rs  graph.rs  lib.rs  metadata.rs  model.rs  parser.rs  permission.rs  schema.rs  semantic.rs  service.rs  span.rs  syntax.rs  workflow.rs
crates/degov-dsl/src/parser/: definition.rs  mod.rs
crates/degov-dsl/src/v1/: mod.rs
crates/degov-dsl/tests/: integration_test.rs  parse_existing_files.rs  parser_tests.rs  schema_modifier_tests.rs  semantic_tests.rs  test_graph.rs  v1_schema_test.rs
crates/degov-engine/: Cargo.toml  README.md  build.rs
crates/degov-engine/examples/: database.rs  distributed_workflow.rs  fetch.rs  simple_workflow.rs  test_console.rs
crates/degov-engine/proto/: workflow.proto
crates/degov-engine/src/: engine.rs  error.rs  lib.rs  model.rs  schema.rs  storage.rs  worker.rs  workflow.rs  workflow_engine.rs
crates/degov-engine/src/engine/: mod.rs  scheduler.rs  server.rs
crates/degov-engine/src/executers/: mod.rs
crates/degov-engine/src/executers/deno/: mod.rs  runtime.rs
crates/degov-engine/src/persistence/: mod.rs  task.rs  worker.rs  workflow.rs
crates/degov-engine/src/runtime/: database.rs  javascript.rs  mod.rs  ops.rs  wasm.rs
crates/degov-engine/src/runtime/js/: kv.js
crates/degov-engine/src/state_machine/: mod.rs  state.rs  transition.rs
crates/degov-engine/src/worker/: mod.rs
crates/degov-engine/tests/: basic_workflow.rs
crates/degov-governance/: Cargo.toml
crates/degov-identity/: Cargo.toml
crates/degov-lsp/: Cargo.toml  README.md
crates/degov-lsp/src/: lib.rs  main.rs
crates/degov-network/: Cargo.toml
crates/degov-rpc/: Cargo.toml
crates/degov-rpc-build/: Cargo.toml
crates/degov-rpc-examples/: Cargo.toml  build.rs
crates/degov-rpc-examples/src/: error.rs  main.rs
crates/degov-server/: Cargo.toml  build.rs
crates/degov-server/proto/: engine.proto
crates/degov-server/src/: error.rs  lib.rs  services.rs
crates/degov-server/src/api/: engine.rs  error.rs  hello.rs  mod.rs
crates/degov-storage/: Cargo.toml
crates/degov-ui/: Cargo.toml
crates/dgl/: Cargo.toml
crates/dgl-lsp/: Cargo.toml
crates/dgl-lsp/src/: lib.rs  main.rs
crates/dgl/src/: error.rs  schema.rs
crates/dgl/src/v1/: mod.rs  model.rs  workflow.rs
crates/dgl/src/validation/: nsid.rs
crates/dgl/tests/: parser_tests.rs  schema_modifier_tests.rs  semantic_tests.rs  v1_schema_test.rs
crates/frontdoor/: Cargo.toml
crates/frontdoor/src/: error.rs  lib.rs
crates/identity/: Cargo.toml
crates/identity-ffi/: Cargo.toml
crates/identity/src/: lib.rs
crates/kube-operator/: Cargo.toml
crates/kube-operator/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/src/mst/: iterator.rs  operations.rs  sync.rs  tree.rs  types.rs
crates/wasm-api-stdout-capture/: Cargo.toml
crates/wasm-api-wasi/: Cargo.toml
crates/workflow/: Cargo.toml  build.rs
crates/workflow/examples/: simple_workflow.rs
crates/workflow/src/: lib.rs  types.rs
crates/workflow/src/engine/: mod.rs  registry.rs  server.rs
crates/workflow/src/persistence/: mod.rs  task.rs  workflow.rs
crates/workflow/src/state_machine/: context.rs
crates/workflow/src/worker/: executor.rs
fdb-config/: fdb.cluster
mono/: package.json
patches/: expo-router.patch
(+167 files in other folders)
