[workspace.package]
name = "degov"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/degov-core",
    "crates/degov-crypto",
    "crates/degov-identity",
    "crates/degov-storage",
    "crates/degov-network",
    "crates/degov-consent",
    "crates/degov-ui",
    "crates/degov-admin",
    "crates/degov-governance",
    "crates/degov-cli",
    "crates/degov-server",
    "crates/degov-dgl",
    "crates/degov-lsp",
    "crates/degov-engine",
    "crates/degov-rpc",
    "crates/degov-rpc-build",
    "crates/degov-rpc-examples",
]

[workspace.dependencies]
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
thiserror = "1.0"
anyhow = "1.0.100"
