[workspace.package]
name = "degov"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/crypto",
    "crates/storage",
    "crates/identity",
    "crates/cli",
    "crates/dgl",
    "crates/dgl-lsp",
    "crates/workflow",
    "crates/wasm-process",
    "crates/wasm-api-stdout-capture",
    "crates/wasm-api-wasi",
    "services/app/degov/hello-world",
]

[workspace.dependencies]
tracing = "0.1.41"
async-trait = "0.1.89"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
thiserror = "1.0"
anyhow = "1.0.100"
wasi-common = "38.0.3"
wiggle = "38.0.3"
wasmtime = "38.0.3"
wasmtime-wasi = "38.0.3"
