[package]
name = "dgv-chancelor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tonic = "0.14.2"
prost = "0.14"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
