[package]
name = "degov-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
tokio = { workspace = true, features = ["full"] }
prost = "0.13"
async-stream = "0.3.6"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
axum-extra = "0.10.0"
thiserror.workspace = true
anyhow.workspace = true
degov-rpc = { path = "../degov-rpc" }
degov-server = { path = "../degov-server" }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.11"
chrono = "0.4"

[build-dependencies]
degov-rpc-build = { path = "../degov-rpc-build" }
