[package]
name = "degov-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
degov-server = { path = "../degov-server" }
degov-dgl = { path = "../degov-dgl" }
degov-core = { path = "../degov-core" }
clap-cargo = "0.15.2"
tokio = { workspace = true }
colored = "2.1"
miette = { version = "7.6.0", features = ["fancy"] }
