[package]
name = "degov-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
degov-server = { path = "../degov-server" }
degov-engine = { path = "../degov-engine" }
degov-dgl = { path = "../degov-dgl" }
degov-core = { path = "../degov-core" }
degov-storage = { path = "../degov-storage" }
clap-cargo = "0.15.2"
tokio = { workspace = true }
colored = "2.1"
miette = { version = "7.6.0", features = ["fancy"] }
axum = "0.8"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
