[package]
name = "degov-db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
foundationdb = { version = "0.9.2", features = ["fdb-7_3"] }
siphasher = "1.0.1"
serde.workspace = true
serde_ipld_dagcbor = "0.6.2"
ipld-core = "0.4.2"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
