[package]
name = "degov-dsl"
version = "0.1.0"
edition = "2021"

[dependencies]
degov-core = { path = "../degov-core" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
petgraph = "0.6"

[dev-dependencies]
indoc = "2.0"

