[package]
name = "degov-dsl"
version = "0.1.0"
edition = "2021"

[dependencies]
degov-core = { path = "../degov-core" }
saphyr = "0.0.6"
garde = { version = "0.22", features = ["derive", "regex", "email", "url"] }
thiserror = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
petgraph = "0.6"
miette = { version = "7.6.0" }
kdl = "6.5.0"

[dev-dependencies]
indoc = "2.0"

