[package]
name = "degov-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "degov-lsp"
path = "src/main.rs"

[dependencies]
degov-dsl = { path = "../degov-dsl" }
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
miette = { version = "7.6.0", features = ["fancy"] }
tracing-subscriber = "0.3"
dashmap = "6.0"
ropey = "1.6"
