[package]
name = "degov-rpc-examples"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
async-stream = "0.3.6"
axum = "0.8"
degov-rpc = { path = "../degov-rpc", features = ["axum-extra"] }
axum-extra = "0.10.0"
prost = "0.13.5"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }

[build-dependencies]
degov-rpc-build = { path = "../degov-rpc-build" }