[package]
name = "degov-server"
version.workspace = true
edition.workspace = true

[dependencies]
degov-storage = { path = "../degov-storage" }
degov-core = { path = "../degov-core" }
degov-api = { path = "../degov-api" }
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = ["cors"] }
hex = "0.4"
axum = "0.8"
