[package]
name = "degov-server"
version.workspace = true
edition.workspace = true

[dependencies]
degov-storage = { path = "../degov-storage" }
degov-core = { path = "../degov-core" }
degov-engine = { path = "../degov-engine" }
tokio = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
foundationdb = { version = "0.9.2", features = ["fdb-7_3"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1.41"
