[package]
name = "dgv-dgl"
version = "0.1.0"
edition = "2021"

[dependencies]
dgv-core = { path = "../core" }
saphyr = "0.0.6"
garde = { version = "0.22", features = ["derive", "regex", "email", "url"] }
thiserror.workspace = true
indexmap = { version = "2.0", features = ["serde"] }
petgraph = "0.6"
miette = { version = "7.6.0", features = ["fancy"] }
kdl = "6.5.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt", "time"], optional = true }
regex = "1.10"
anyhow.workspace = true

[dev-dependencies]
indoc = "2.0"
tokio = { version = "1.0", features = ["full", "test-util"] }

[features]
default = []
async = ["tokio"]
graph = []

