[package]
name = "dgv-frontdoor"
version.workspace = true
edition.workspace = true


[dependencies]
tokio = { workspace = true }
tokio-util = "0.7.17"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
axum = "0.8.6"
futures = { workspace = true }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
