[package]
name = "dgv-kube-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
