[package]
name = "dgv-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
foundationdb = { version = "0.9.2", features = ["fdb-7_3"] }
siphasher = "1.0.1"
serde.workspace = true
serde_bytes = "0.11"
serde_ipld_dagcbor = "0.6.2"
ipld-core = "0.4.2"
serde_json.workspace = true
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
tracing = "0.1.41"
thiserror = "2.0.16"
blake3 = "1.8.2"
hex = "0.4.3"
crdts = "7"
aes-gcm = { version = "0.10", features = ["aes"] }
rand = "0.8"
base64 = "0.22"
async-trait = "0.1"
async-recursion = "1.1"
