[package]
name = "dgv-workflow"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
dgv-storage = { path = "../storage" }
foundationdb = { version = "0.9.2", features = ["fdb-7_3"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
async-trait = "0.1"

# Runtime dependencies
rquickjs = { version = "0.9", features = ["array-buffer"] }
wasmtime = { version = "37", features = ["component-model", "async"] }
wasmtime-wasi = "37"
base64 = "0.22"

# RPC dependencies
connectare = { git = "https://github.com/linlogge/connectare", rev = "fc4f519" }
axum = "0.8"
prost = ">=0.13,<0.14"
bytes = "1.7"
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
connectare-build = { git = "https://github.com/linlogge/connectare", rev = "fc4f519" }

[dev-dependencies]
tracing-subscriber = "0.3"
