[package]
name = "connect-rpc"
version = "0.5.3"
authors = ["Alec Thilenius <alec@thilenius.com>"]
edition = "2021"
categories = [
  "network-programming",
  "web-programming",
  "web-programming::http-server",
]
description = "Connect-Web RPC for Axum"
keywords = ["rpc", "axum", "protobuf", "connect"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/AThilenius/connect-rpc"

[dependencies]
async-trait = "0.1.85"
axum = { version = ">=0.8", features = ["multipart"] }
axum-extra = { version = "0.10.0", optional = true }
base64 = "0.22.1"
futures = "0.3.31"
pbjson = "0.7.0"
pbjson-types = "0.7.0"
prost = ">=0.13,<0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13.0"
bytes = "1.7.2"
form_urlencoded = "1.2.1"
futures-util = "0.3.31"
http = "1.1"
http-body = "1.0.1"
http-body-util = "0.1.2"
percent-encoding = "2.3.1"
thiserror = "1.0.64"
tracing = "0.1.40"
reqwest = { version = "0.12.8", features = ["stream"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
